# lorenzpy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml  test_and_coverage.yml  testing.yml
docs/: index.md  reference.md
examples/: README.md  double_pendulum_lyapunov_spectrum.py  lyapunov_spectra_of_3d_autonomous_flows.py
reference/: index.html
src/lorenzpy/: __init__.py  main.py  measures.py  simulations.py
src/lorenzpy/plot/: __init__.py  plot.py  plot_3d.py
src/lorenzpy/simulations/: __init__.py  _autonomous_flows.py  _base.py  _discrete_maps.py  _driven_systems.py  _others.py  autonomous_flows.py  base.py  discrete_maps.py  driven_systems.py  others.py  solvers.py
static/: gen_attractor_animation.py
tests/: __init__.py  test_measures.py  test_simulations.py
