[project]
name = "lorenzpy"
readme = "README.md"
version = "0.1.0"
authors = [
    { name = "Dennis Duncan", email = "DuncDennis@gmail.com" }
]
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy==1.24.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "coverage==7.2.1",
    "pytest-cov==4.0",
    "black==22.12.0",
    "mypy==1.1.1",
    "ruff==0.0.254",
]
plot = [
    "plotly==5.13.1",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/lorenzpy/plot/*"]

[tool.pytest.ini_options]
addopts = "--cov-config=pyproject.toml --cov-report term-missing --cov=src"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 88

[tool.mypy]
files = "src/lorenzpy/"

[[tool.mypy.overrides]]
module = ['plotly.*']   # ignore missing imports from the plotly package.
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "D",    # pydocstyle
    "I001", # isort
]
src = ["src", "tests"]

# Ignore `F401` (unused-import) in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
