[project]
name = "lorenzpy"
readme = "README.md"
version = "0.0.1"
description = "A Python package to simulate and measure chaotic dynamical systems."
authors = [
    { name = "Dennis Duncan", email = "DuncDennis@gmail.com" }
]
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.24.2",
]

[project.urls]
"Documentation" = "https://duncdennis.github.io/lorenzpy/"
"Homepage" = "https://github.com/DuncDennis/lorenzpy"

[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "pytest-cov==4.0",
    "black==22.12.0",
    "mypy==1.1.1",
    "ruff==0.0.254",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material"
]
plot = [
    "plotly==5.13.1",
]

[tool.pytest.ini_options]
addopts = "--verbose --cov-config=pyproject.toml --cov-report term-missing --cov=lorenzpy"

[tool.coverage.run]
omit = ["*/plot/*"]

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 88

[tool.mypy]
files = "src/lorenzpy/"

[[tool.mypy.overrides]]
module = ['plotly.*']   # ignore missing imports from the plotly package.
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "D",    # pydocstyle
    "I001", # isort
]
src = ["src", "tests"]

# Ignore `F401` (unused-import) in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
