[project]
name = "lorenzpy"
readme = "README.md"
version = "0.0.1"
description = "A Python package to simulate and measure chaotic dynamical systems."
authors = [
  {name = "Dennis Duncan", email = "DuncDennis@gmail.com"},
]
maintainers = [
  {name = "Dennis Duncan", email = "DuncDennis@gmail.com"}
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.10.0",
]

[project.urls]
homepage = "https://github.com/DuncDennis/lorenzpy"
repository = "https://github.com/DuncDennis/lorenzpy"
documentation = "https://duncdennis.github.io/lorenzpy/"
changelog = "https://github.com/DuncDennis/lorenzpy/blob/main/CHANGELOG.md"


[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "pytest-cov==4.0",
    "black==23.1.0",
    "mypy==1.1.1",
    "ruff==0.1.0",
    "mkdocs",  # add version?
    "mkdocstrings[python]",  # add version?
    "mkdocs-material",  # add version?
    "pre-commit==3.1.1",  # add version?
]
plot = [
    "matplotlib>=3.5"
]

[tool.pytest.ini_options]
addopts = "--verbose --cov-config=pyproject.toml --cov-report term-missing --cov=lorenzpy"

[tool.coverage.run]
omit = ["*/plot/*"]

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 88

[tool.mypy]
files = "src/lorenzpy/"

[[tool.mypy.overrides]]
module = ['numpy', 'pytest', "scipy.*", "matplotlib.*", "PIL", "mpl_toolkits.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "D",    # pydocstyle
    "I001", # isort
]
src = ["src", "tests"]

# Ignore `F401` (unused-import) in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
